[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/ui/panels/dark-square.png" type="Texture" id=1]
[ext_resource path="res://ui/vertScroll/vertScroll.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/ui/buttons/choose.png" type="Texture" id=3]

[node name="vertScroll" type="TextureRect"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -27.0
margin_right = 27.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="scrollBar" type="VScrollBar" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 6
size_flags_horizontal = 0
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 0.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
custom_step = -1.0
_sections_unfolded = [ "Focus", "Mouse", "Rect" ]

[node name="scrollLabel" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="submit" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 45.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
stretch_mode = 4
_sections_unfolded = [ "Margin", "Textures" ]

[connection signal="button_up" from="submit" to="." method="_on_submit_button_up"]

[connection signal="pressed" from="submit" to="." method="_on_submit_pressed"]


